# libsql-elixir

./: .gitignore  .tool-versions  README.md  mix.exs
lib/: libsql.ex
lib/libsql/: connection.ex  database.ex  native.ex  result.ex
native/libsql_native/: Cargo.toml  README.md
native/libsql_native/src/: lib.rs  task.rs
test/: libsql_test.exs
