[package]
name = "libsql_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "libsql_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
libsql = {git = "https://github.com/tursodatabase/libsql.git", rev = "cf6bf609c767320d70f66cf9b0725336784fb7a7" }
once_cell = "1.19.0"
rustler = "0.31.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
